--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,23 +8,37 @@
 
 
     <!-- Tags referentes a TelaCadastrar.java e activity_tela_cadastrar.xml (((FUNCIONARIO)))-->
-    <!-- Tags referentes aos TextView-->
-    <string name="txtCPFFunc"> CPF do Funcionário (ID):</string>
-    <string name="txtLogin">Login:</string>
-    <string name="txtSenha">Senha:</string>
-    <string name="txtEmail">Email:</string>
-    <string name="txtFone">Telefone:</string>
-    <string name="txtComissao">Comissão:</string>
-    <!-- Tags referentes aos Button-->
-    <string name="btn_CadFunc">CADASTRAR</string>
-    <string name="btn_VoltarCad">VOLTAR</string>
-    <!-- Tags referentes aos EditText-->
-    <string name="edt_CPFFunc"></string>
-    <string name="edt_Login"></string>
-    <string name="edt_Senha"></string>
-    <string name="edt_Email"></string>
-    <string name="edt_Fone"></string>
-    <string name="edt_Comissao"></string>
+        <!-- Tags referentes aos TextView-->
+            <string name="txtCPFFunc"> CPF do Funcionário (ID):</string>
+            <string name="txtLogin">Login:</string>
+            <string name="txtSenha">Senha:</string>
+            <string name="txtEmail">Email:</string>
+            <string name="txtFone">Telefone:</string>
+            <string name="txtComissao">Comissão:</string>
+        <!-- Tags referentes aos Button-->
+            <string name="btn_CadFunc">CADASTRAR</string>
+            <string name="btn_VoltarCad">VOLTAR</string>
+        <!-- Tags referentes aos EditText-->
+            <string name="edt_CPFFunc"></string>
+            <string name="edt_Login"></string>
+            <string name="edt_Senha"></string>
+            <string name="edt_Email"></string>
+            <string name="edt_Fone"></string>
+            <string name="edt_Comissao"></string>
+
+    <!-- Tags referente a TelaLogin.java e activity_tela_login.xml-->
+        <!-- Tags referentes ao TextView-->
+            <string name="txt_TextoLOGIN">TELA LOGIN</string>
+            <string name="txt_TextoLOGIN_usuario">Usuario:</string>
+            <string name="txt_TextoLOGIN_SENHA">Senha:</string>
+        <!-- Tags referentes ao EditText-->
+            <string name="edt_LOGIN_usuario"></string>
+            <string name="edt_LOGIN_senha"></string>
+        <!-- Tags referentes ao Button-->
+            <string name="btn_LOGIN_voltar">VOLTAR</string>
+            <string name="btn_LOGIN_entrar">LOGAR</string>
+
+
 
 
 </resources>
