--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <!-- Tags referentes a TelaCadastrar.java e activity_tela_cadastrar.xml (((FUNCIONARIO)))-->
     <!-- Tags referentes aos TextView-->
+    <string name="txtMsgFunc">Cadastrar Funcionário</string>
     <string name="txtCPFFunc"> CPF do Funcionário (ID):</string>
     <string name="txtSenha">Senha:</string>
     <string name="txtEmail">Email:</string>
