--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,11 +62,24 @@
     <string name="txtPainelCOntrole">Painel de Controle</string>
     <string name="txtSincronizar">Atenção!! Não esqueça de sincronizar os dados do aplicativo antes de sair do Painel de Controle!!!</string>
     <string name="btnSincronizar">Sincronizar</string>
+    <string name="txtClientePAINEL">Cliente</string>
+    <string name="txtAgendamentoPAINEL">Agendamento</string>
+    <string name="txtOrdemPAINEL">Ordem de Serviço</string>
     <!--Tags referentes aos EditText-->
     <!--Tags referentes aos Button-->
     <string name="btnPainelCliente">Cadastrar Cliente</string>
     <string name="btnPainelAgendamento">Cadastrar Agendamento</string>
     <string name="btnPainelServico">Cadastrar Ordem de Serviço</string>
+    <string name="btnPainelListarCLiente">Listar Clientes</string>
+    <string name="btnPainelListarAgendamentos">Listar Agendamentos</string>
+    <string name="btnPainelListarOrdensServicos">Listar Ordens de Serviço</string>
+    <string name="btnPainelEditarCliente">Editar Cliente</string>
+    <string name="btnPainelExcluirCliente">Excluir Cliente</string>
+    <string name="btnPainelEditarAgendamento">Editar Agendamento</string>
+    <string name="btnPainelExcluirAgendamento">Excluir Agendamento</string>
+    <string name="btnPainelExcluirOrdem">Excluir Ordem de Serviço</string>
+    <string name="btnPainelEditarOrdem">Editar Ordem de Serviço</string>
+
     <string name="btnPainelVoltar">Sair</string>
 
 </resources>
