Desenvolvido a tela de listar clientes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,10 +88,12 @@
 
 
     <!--Tags referente a tela ListarUsuarios -->
+    <string name="btnVoltar">Voltar</string>
     <!--TxtView-->
+    <string name="lista_clientes">Lista Clientes</string>
     <!--EditView-->
     <!--Button-->
-    <string name="btnVoltar_TelaListarUsuarios">Voltar</string>
+
 
 
     <!--EditarUsuarioInput-->
