--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -349,11 +349,19 @@
     <string name="btnOrdemServicoDELETAR_deletar">Excluir</string>
     <string name="btnOrdemServicoDELETAR_voltar">Voltar</string>
 
-
+<!--    Sign-in-->
     <string name="sign_in">sign_in</string>
     <string name="password">password</string>
     <string name="email">email</string>
     <string name="Porque_Você_Vale_a_Pena">Porque Você Vale a Pena</string>
+
+<!--    Register Funcionario-->
+    <string name="nome">Nome</string>
+    <string name="cpf">CPF</string>
+    <string name="register">Cadastrar</string>
+    <string name="telefone">Telefone</string>
+    <string name="comissao">Comissão</string>
+
 
 
 </resources>
