--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -350,8 +350,8 @@
     <string name="btnOrdemServicoDELETAR_voltar">Voltar</string>
 
 <!--    Sign-in-->
-    <string name="sign_in">sign_in</string>
-    <string name="password">password</string>
+    <string name="sign_in">Entrar</string>
+    <string name="password">senha</string>
     <string name="email">email</string>
     <string name="Porque_Você_Vale_a_Pena">Porque Você Vale a Pena</string>
 
