--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -351,6 +351,7 @@
 
 <!--    Sign-in-->
     <string name="sign_in">Entrar</string>
+    <string name="cad_func_style">Cadastrar</string>
     <string name="password">senha</string>
     <string name="email">email</string>
     <string name="Porque_Você_Vale_a_Pena">Porque Você Vale a Pena</string>
@@ -361,6 +362,7 @@
     <string name="register">Cadastrar</string>
     <string name="telefone">Telefone</string>
     <string name="comissao">Comissão</string>
+    <string name="func_voltar_style">Voltar</string>
 
 
 
