--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -369,7 +369,7 @@
     <string name="telefone">Telefone</string>
     <string name="comissao">Comissão</string>
     <string name="func_voltar_style">Voltar</string>
-
+    <string name="Voltar">Voltar</string>
 
 
 </resources>
