--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -403,6 +403,7 @@
     <string name="txt_valor">Valor do serviço</string>
     <string name="txt_funcionarioOS">Responsável pela OS</string>
     <string name="txt_funcionarioSV">Responsável pelo serviço</string>
+    <string name="txt_logout">Sair do App</string>
 
 
 </resources>
